--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/clock.svg" />
     <link href="./src/styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CronMaster - Job Scheduler</title>
+    <title>Cronus - Job Scheduler</title>
   </head>
   <body>
     <div id="root"></div>
